<resources>
    <string name="app_name">PrintSizer</string>
    <string name="nav_header_title">PrintSizer</string>
    <string name="nav_header_subtitle">Darkroom Printing Calculator</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="empty" />
    <string name="action_settings">Settings</string>
    <string name="menu_home">PrintSizer</string>
    <string name="menu_enlargers">Enlarger Profiles</string>
    <string name="menu_papers">Paper Profiles</string>
    <string name="menu_enlarger_add">Add Enlarger Profile</string>
    <string name="menu_enlarger_modify">Modify Enlarger Profile</string>
    <string name="menu_paper_add">Add Paper Profile</string>
    <string name="menu_paper_modify">Modify Paper Profile</string>
    <string name="action_copy">Copy</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_accept">Accept</string>
    <string name="action_remove">Remove</string>
    <string name="label_name">Name</string>
    <string name="label_description">Description</string>
    <string name="label_lens_focal_length">Lens focal length</string>
    <string name="unit_suffix_mm">mm</string>
    <string name="unit_suffix_cm">cm</string>
    <string name="label_enlarger_height_offset">Enlarger height offset</string>
    <string name="label_smaller_test_exposure">Smaller Test Exposure</string>
    <string name="label_enlarger_height">Enlarger height</string>
    <string name="label_exposure_time">Exposure time</string>
    <string name="unit_suffix_seconds">secs</string>
    <string name="label_larger_test_exposure">Larger Test Exposure</string>
    <string name="error_enlarger_missing_name">Enlarger must have a name</string>
    <string name="error_enlarger_missing_lens_focal_length">Enlarger lens focal length is missing</string>
    <string name="error_enlarger_lens_focal_length_invalid">Enlarger lens focal length is invalid</string>
    <string name="error_enlarger_height_offset_invalid">Enlarger height offset is invalid</string>
    <string name="error_enlarger_height_needed">Enlarger height is needed</string>
    <string name="error_enlarger_height_invalid">Enlarger height is invalid</string>
    <string name="error_enlarger_height_too_low_for_focal_length">Enlarger height is too low for the lens focal length</string>
    <string name="error_exposure_time_needed">Exposure time is needed</string>
    <string name="error_exposure_time_invalid">Exposure time is invalid</string>
    <string name="error_enlarger_profile_invalid">Enlarger profile is invalid</string>
    <string name="enlarger_profile_copy_name_template">Copy of %1$s</string>
    <string name="paper_profile_copy_name_template">Copy of %1$s</string>
    <string name="action_about">About</string>
    <string name="label_base_print">Initial Print</string>
    <string name="label_target_print">Target Print</string>
    <string name="action_choose_enlarger_profile">Choose Enlarger Profile…</string>
    <string name="dialog_choose_enlarger_profile">Choose enlarger profile</string>
    <string name="dialog_choose_paper_profile">Choose paper profile</string>
    <string name="dialog_base_print_paper_profile">Initial print paper profile</string>
    <string name="dialog_target_print_paper_profile">Target print paper profile</string>
    <string name="action_add_enlarger_profile">Add Enlarger Profile</string>
    <string name="action_add_paper_profile">Add paper profile</string>
    <string name="action_add_stock_profile">Add stock profile</string>
    <plurals name="title_list_selection">
        <item quantity="one">%s selected</item>
        <item quantity="other">%s selected</item>
    </plurals>
    <plurals name="title_delete_profiles_dialog">
        <item quantity="one">Delete profile?</item>
        <item quantity="other">Delete %s profiles?</item>
    </plurals>
    <string name="label_version_prefix">Version %1$s</string>
    <string name="label_enlarger_height_units">Enlarger height units</string>
    <string name="action_add_test_exposures">Add Test Exposures</string>
    <string name="label_enlarger_profile_calibrated">Calibrated</string>
    <string name="label_enlarger_profile_uncalibrated">Uncalibrated</string>
    <string name="note_add_test_exposures">Test exposures are used to calibrate this profile to the unique characteristics of your enlarger, which will make results more accurate.</string>
    <string name="placeholder_no_enlarger_profiles">No Enlarger Profiles</string>
    <string name="placeholder_no_paper_profiles">No Paper Profiles</string>
    <string name="description_fork_me_on_github">Fork me on Github</string>
    <string name="description_save_enlarger_profile">Save enlarger profile</string>
    <string name="description_save_paper_profile">Save paper profile</string>
    <string name="label_exposure_increments">Exposure increments</string>
    <string name="description_exposure_compensation">Exposure compensation</string>
    <string name="label_grade_00">Grade 00</string>
    <string name="label_grade_0">Grade 0</string>
    <string name="label_grade_1">Grade 1</string>
    <string name="label_grade_2">Grade 2</string>
    <string name="label_grade_3">Grade 3</string>
    <string name="label_grade_4">Grade 4</string>
    <string name="label_grade_5">Grade 5</string>
    <string name="label_grade_unfiltered">Unfiltered</string>
    <string name="heading_filter_grade">Filter Grade</string>
    <string name="heading_iso_p">ISO (P)</string>
    <string name="heading_iso_r">ISO (R)</string>
    <string name="error_paper_missing_name">Paper must have a name</string>
    <string name="note_paper_properties">Paper properties are based on ISO 6846:1992 and typically come from the manufacturer\'s datasheet. Adjusting them based on your own testing will make results more accurate.</string>
    <string name="label_theme_setting">Theme</string>
    <string name="label_burndodge_default_type">Default adjustment type</string>
    <string name="label_burndodge_stops_coarse">Coarse stops adjustment</string>
    <string name="label_burndodge_stops_fine">Fine stops adjustment</string>
    <string name="burndodge_area_default_name">Burn/Dodge Area %s</string>
    <string name="label_burndodge_area_name">Burn/Dodge area name</string>
    <string name="label_adjustment_time">Adjustment time</string>
    <string name="label_adjustment_percentage">Adjustment percentage</string>
</resources>