<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

            <ImageView
                android:id="@+id/imageViewAppIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textViewAppSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/nav_header_subtitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textViewAppVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textViewAppDescribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewAppCopyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="Copyright \u00A9 2020 Derek Konigsberg"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageViewGithub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:src="@drawable/ic_forkme_github"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="RtlHardcoded"
        android:contentDescription="@string/description_fork_me_on_github" />
</FrameLayout>